tests/spec/parse/snapshots/let_destructure_tuple_inferred.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let (a, b) = get_pair();
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Tuple {
                                elements: [
                                    Identifier {
                                        identifier: "a",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 20,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    Identifier {
                                        identifier: "b",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 23,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 6,
                                },
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: Identifier {
                                value: "get_pair",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 28,
                                    byte_length: 8,
                                },
                                resolution: Unresolved,
                            },
                            args: [],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 10,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 23,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 30,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 40,
        },
    },
]
