tests/spec/parse/snapshots/let_destructure_tuple_wildcard.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let (_, status_code): (string, int) = http_request();
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Tuple {
                                elements: [
                                    WildCard {
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 20,
                                            byte_length: 1,
                                        },
                                    },
                                    Identifier {
                                        identifier: "status_code",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 23,
                                            byte_length: 11,
                                        },
                                        binding: None,
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 16,
                                },
                            },
                            annotation: Some(
                                Tuple {
                                    elements: [
                                        Constructor {
                                            name: "string",
                                            params: [],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 38,
                                                byte_length: 6,
                                            },
                                        },
                                        Constructor {
                                            name: "int",
                                            params: [],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 46,
                                                byte_length: 3,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 37,
                                        byte_length: 13,
                                    },
                                },
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: Identifier {
                                value: "http_request",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 53,
                                    byte_length: 12,
                                },
                                resolution: Unresolved,
                            },
                            args: [],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 53,
                                byte_length: 14,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 52,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 59,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 69,
        },
    },
]
